Refactor SortBy Extractor